# rainbow

./: Cargo.toml  README.md
data/: 50000_50000_5.table  README.md  filter.py  passwords-05.txt
src/: lib.rs  main.rs
